<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="109dp"
        android:layout_height="73dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:onClick="OpenCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/FullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/suiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:text="@string/Suite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <TextView
        android:id="@+id/vbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:text="@string/VestButtery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suiteTextView" />

    <TextView
        android:id="@+id/hbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:text="@string/HeadsetBattery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vbTextView" />

    <TextView
        android:id="@+id/vestBatteryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="180dp"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/vbTextView"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <TextView
        android:id="@+id/headsetBatteryTextView"
        android:layout_width="33dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="180dp"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/hbTextView"
        app:layout_constraintTop_toBottomOf="@+id/vestBatteryTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SaveToDatabase"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="224dp"
        android:text="Fire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hbTextView"
         />


</androidx.constraintlayout.widget.ConstraintLayout>